# DjangoBoilerplate

./: .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
app/: config.py  settings.py  urls.py
assets/js/: common.js
public/: admin.py  models.py  urls.py
public/forms/: registration.py
public/migrations/: 0001_initial.py
public/views/: __init__.py  about.py  blog.py  contact.py  dashboard.py  index.py  sign_in.py  sign_out.py  utils.py
templates/: base.html
templates/components/: alert.html  input.html
templates/partials/: footer.html  navbar.html
templates/public/: about.html  blog.html  contact.html  dashboard.html  index.html
