[tool.poetry]
name = "djangoboilerplate"
version = "0.1.0"
description = "Boiler plate code for a tipical django project."
authors = ["Md. Rifaet Ullah <md.rifaetullahrifat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
environs = "^9.5.0"
black = "^22.8.0"
Pillow = "^9.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
